--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -19,3 +19,22 @@
     </ul>
   </nav>
 </div>
+
+<!-- 
+<div class="pagination">
+  {% if paginator.previous_page %}
+    <a href="{{ paginator.previous_page_path | prepend: site.baseurl }}">&laquo; Previous</a>
+  {% endif %}
+
+  {% for page in (1..paginator.total_pages) %}
+    {% if page == paginator.page %}
+      <span>{{ page }}</span>
+    {% else %}
+      <a href="{{ paginator.page_path | prepend: site.baseurl }}">{{ page }}</a>
+    {% endif %}
+  {% endfor %}
+
+  {% if paginator.next_page %}
+    <a href="{{ paginator.next_page_path | prepend: site.baseurl }}">Next &raquo;</a>
+  {% endif %}
+</div> -->
